add description of deleted objects to tooltip

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -56,6 +56,7 @@
     "isActive": "Aktiv",
     "remove": "Entfernen",
     "delete": "Löschen",
+    "deleted": "Gelöscht",
     "clear": "Leeren",
     "unlock": "Entsperren",
     "lock": "Sperren",
