--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -56,6 +56,7 @@
     "isActive": "Aktive",
     "remove": "Remove",
     "delete": "Delete",
+    "deleted": "Deleted",
     "clear": "Clear",
     "unlock": "Unlock",
     "lock": "Lock",
