add missing avatar and icon and make name unique

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -38,6 +38,7 @@
     "actionObject": "Aktionsobjekt",
     "clickArea": "Klickbarer Bereich",
     "recipes": "Rezepte",
+    "recipe": "Rezept",
     "files": "Dateien",
     "file": "Datei",
     "requisite": "Requisite",
