--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -38,6 +38,7 @@
     "actionObject": "Action object",
     "clickArea": "Clickable area",
     "recipes": "Recipes",
+    "recipe": "Recipe",
     "files": "Files",
     "file": "File",
     "requisite": "Requisite",
