--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -124,5 +124,6 @@
     "delay": "Delay",
     "ingredientsExact": "Exact ingredients",
     "quantityExact": "Exact quantities",
-    "addRecipe": "Add recipe"
+    "addRecipe": "Add recipe",
+    "addCertainItem": "Add {type} \"{name}\""
 }
