add pre defining source and target selector

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -125,5 +125,7 @@
     "ingredientsExact": "Exakte Zutaten",
     "quantityExact": "Exakte Mengen",
     "addRecipe": "Rezept hinzufügen",
-    "addCertainItem": "{type} \"{name}\" hinzufügen"
+    "addCertainItem": "{type} \"{name}\" hinzufügen",
+    "hand": "Hand",
+    "actionObjectFromScene": "Aktionsobjekt aus Szene"
 }
