--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -125,5 +125,7 @@
     "ingredientsExact": "Exact ingredients",
     "quantityExact": "Exact quantities",
     "addRecipe": "Add recipe",
-    "addCertainItem": "Add {type} \"{name}\""
+    "addCertainItem": "Add {type} \"{name}\"",
+    "hand": "Hand",
+    "actionObjectFromScene": "Action object from scene"
 }
