--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -126,6 +126,5 @@
     "quantityExact": "Exakte Mengen",
     "addRecipe": "Rezept hinzufügen",
     "addCertainItem": "{type} \"{name}\" hinzufügen",
-    "hand": "Hand",
-    "actionObjectFromScene": "Aktionsobjekt aus Szene"
+    "hand": "Hand"
 }
