--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -126,5 +126,6 @@
     "quantityExact": "Exact quantities",
     "addRecipe": "Add recipe",
     "addCertainItem": "Add {type} \"{name}\"",
-    "hand": "Hand"
+    "hand": "Hand",
+    "reCalculate": "recalculate"
 }
