add missing requirements message and client side validation

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -127,5 +127,8 @@
     "addRecipe": "Rezept hinzufügen",
     "addCertainItem": "{type} \"{name}\" hinzufügen",
     "hand": "Hand",
-    "reCalculate": "Erneut berechnen"
+    "reCalculate": "Erneut berechnen",
+    "missingRequirementsTitle": "Fehlende Bedingungen",
+    "missingRequirementsText": "\"{name}\" kann nicht gespeichert werden, da es nicht vollständig ist.",
+    "ok": "OK"
 }
