--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -130,5 +130,8 @@
     "reCalculate": "recalculate",
     "missingRequirementsTitle": "Missing requirements",
     "missingRequirementsText": "\"{name}\" cannot be saved because it is incomplete.",
-    "ok": "OK"
+    "ok": "OK",
+    "amount": "Amount",
+    "object": "Specialized object",
+    "activated": "Activated"
 }
