--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -133,5 +133,6 @@
     "ok": "OK",
     "amount": "Amount",
     "object": "Specialized object",
-    "activated": "Activated"
+    "activated": "Activated",
+    "selectFromList": "Please drag the object here from the list on the left"
 }
