--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -136,5 +136,6 @@
     "activated": "Aktiviert",
     "selectFromList": "Objekt bitte links aus der Liste hierher ziehen",
     "points": "Punkte",
-    "totalPoints": "Punkte gesamt"
+    "totalPoints": "Punkte gesamt",
+    "knowledge": "Wissen"
 }
