--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -136,5 +136,6 @@
     "activated": "Activated",
     "selectFromList": "Please drag the object here from the list on the left",
     "points": "Points",
-    "totalPoints": "Total points"
+    "totalPoints": "Total points",
+    "knowledge": "Knowledge"
 }
