add missing language strings and show files in tablet

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -142,5 +142,7 @@
     "knowledgeDescriptionEn": "Englische Wissenbeschreibung",
     "addKnowledge": "Wissen hinzufügen",
     "collapseAll": "Alles einklappen",
-    "xElements": "{count} Elemente"
+    "xElements": "{count} Elemente",
+    "information": "Informationen",
+    "notes": "Notizen"
 }
