--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -144,5 +144,7 @@
     "collapseAll": "Alles einklappen",
     "xElements": "{count} Elemente",
     "information": "Informationen",
-    "notes": "Notizen"
+    "notes": "Notizen",
+    "entity": "Entität",
+    "entities": "Entitäten"
 }
