--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -144,5 +144,7 @@
     "collapseAll": "Collapse all",
     "xElements": "{count} elements",
     "information": "Information",
-    "notes": "Notes"
+    "notes": "Notes",
+    "entity": "Entity",
+    "entities": "Entities"
 }
