add combine button

--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -148,5 +148,6 @@
     "entity": "Entity",
     "entities": "Entities",
     "addEntity": "Add entity",
-    "addObject": "Add object"
+    "addObject": "Add object",
+    "combine": "Combine"
 }
