--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -148,5 +148,6 @@
     "entity": "Entität",
     "entities": "Entitäten",
     "addEntity": "Entität hinzufügen",
-    "addObject": "Objekt hinzufügen"
+    "addObject": "Objekt hinzufügen",
+    "combine": "Kombinieren"
 }
