add goals to lesson

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -140,6 +140,8 @@
     "knowledge": "Wissen",
     "knowledgeDescriptionDe": "Deutsche Wissenbeschreibung",
     "knowledgeDescriptionEn": "Englische Wissenbeschreibung",
+    "goalDescriptionDe": "Deutsche Zielbeschreibung",
+    "goalDescriptionEn": "Englische Zielbeschreibung",
     "addKnowledge": "Wissen hinzufügen",
     "collapseAll": "Alles einklappen",
     "xElements": "{count} Elemente",
