add abstract and missing translations

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -137,6 +137,10 @@
     "selectFromList": "Objekt bitte links aus der Liste hierher ziehen",
     "points": "Punkte",
     "totalPoints": "Punkte gesamt",
+    "recipePoints": "Punkte Rezepte",
+    "goalPoints": "Punkte Ziele",
+    "inventoryObjects": "Inventarobjekte",
+    "abstract": "Zusammenfassung",
     "knowledge": "Wissen",
     "knowledgeDescriptionDe": "Deutsche Wissenbeschreibung",
     "knowledgeDescriptionEn": "Englische Wissenbeschreibung",
