--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -137,6 +137,10 @@
     "selectFromList": "Please drag the object here from the list on the left",
     "points": "Points",
     "totalPoints": "Total points",
+    "recipePoints": "Recipes points",
+    "goalPoints": "Goals points",
+    "inventoryObjects": "Inventory objects",
+    "abstract": "Abstract",
     "knowledge": "Knowledge",
     "knowledgeDescriptionDe": "German knowledge description",
     "knowledgeDescriptionEn": "English knowledge description",
