--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -157,5 +157,12 @@
     "addObject": "Objekt hinzufügen",
     "combine": "Kombinieren",
     "finishLesson": "Lektion abschließen",
-    "finishLessonDescription": "Bitte wählen Sie eine Antwort aus den folgenden Möglichkeiten aus um die Lektion abzuschließen. Nach Auswahl der Antwort erfahren Sie, ob Sie bestanden haben oder nicht."
+    "finishLessonDescription": "Bitte wählen Sie eine Antwort aus den folgenden Möglichkeiten aus um die Lektion abzuschließen. Nach Auswahl der Antwort erfahren Sie, ob Sie bestanden haben oder nicht.",
+    "tablet": "Tablet",
+    "knowledgeBase": "Wissensbasis",
+    "protocol_exec": "\"{name}\" wurde ausgeführt",
+    "protocol_add": "\"{name}\" wurde zu \"{location}\" hinzugefügt",
+    "protocol_remove": "\"{name}\" wurde von \"{location}\" entfernt",
+    "protocol_show": "\"{name}\" wurde in \"{location}\" angezeigt",
+    "protocol_hide": "\"{name}\" wurde von \"{location}\" ausgeblendet"
 }
