--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -160,6 +160,7 @@
     "finishLessonDescription": "Please select an answer from the following options to complete the lesson. After choosing the answer, you will find out whether you passed or not.",
     "tablet": "Tablet",
     "knowledgeBase": "Knowledge base",
+    "protocol": "Protocol",
     "protocol_exec": "{name} was executed",
     "protocol_add": "{name} was added to {location}",
     "protocol_remove": "{name} was removed from {location}",
