--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -169,5 +169,6 @@
     "addNote": "Notiz hinzufügen",
     "newNote": "Neue Notiz",
     "finishedLessonTitle": "Lektion abgeschlossen",
-    "finishedLessonText": "Sie haben diese Lektion mit {grade}% der möglichen Punkte abgeschlossen"
+    "finishedLessonText": "Sie haben diese Lektion mit {grade}% der möglichen Punkte abgeschlossen",
+    "addedNewKnowledge": "Neues Wissen hinzugefügt"
 }
