add variables to speech bubbles

--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -179,5 +179,7 @@
     "recipeAfterClickOnNext": "Execute recipe after clicking on \"continue\".",
     "noRecipeSelected": "No recipe selected",
     "next": "Next",
-    "finish": "Finish"
+    "finish": "Finish",
+    "nothingFound": "Nothing found",
+    "somethingWentWrong": "Something went wrong. Please try again. Please write an E-Mail to the administrator to the following address if the problem still exists:\n\n{adminMail}\n\n{error}"
 }
