--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -179,5 +179,7 @@
     "recipeAfterClickOnNext": "Rezept nach Klick auf \"weiter\" ausführen",
     "noRecipeSelected": "Kein Rezept ausgewählt",
     "next": "Weiter",
-    "finish": "Fertig"
+    "finish": "Fertig",
+    "nothingFound": "Nichts gefunden",
+    "somethingWentWrong": "Etwas ist schiefgelaufen. Bitte versuche es erneut. Sollte das Problem weiterhin bestehen, kontaktiere bitte den Administrator unter folgeder E-Mail-Adresse:\n\n{adminMail}\n\n{error}"
 }
