--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -181,5 +181,6 @@
     "next": "Next",
     "finish": "Finish",
     "nothingFound": "Nothing found",
-    "somethingWentWrong": "Something went wrong. Please try again. Please write an E-Mail to the administrator to the following address if the problem still exists:\n\n{adminMail}\n\n{error}"
+    "somethingWentWrong": "Something went wrong. Please try again. Please write an E-Mail to the administrator to the following address if the problem still exists:\n\n{adminMail}\n\n{error}",
+    "documentation": "Documentation"
 }
