--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -181,5 +181,6 @@
     "next": "Weiter",
     "finish": "Fertig",
     "nothingFound": "Nichts gefunden",
-    "somethingWentWrong": "Etwas ist schiefgelaufen. Bitte versuche es erneut. Sollte das Problem weiterhin bestehen, kontaktiere bitte den Administrator unter folgeder E-Mail-Adresse:\n\n{adminMail}\n\n{error}"
+    "somethingWentWrong": "Etwas ist schiefgelaufen. Bitte versuche es erneut. Sollte das Problem weiterhin bestehen, kontaktiere bitte den Administrator unter folgeder E-Mail-Adresse:\n\n{adminMail}\n\n{error}",
+    "documentation": "Dokumentation"
 }
