allow recipes as output

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -186,5 +186,6 @@
     "addedPunishment": "Bestrafung wegen zu vieler Klicks hinzugefügt",
     "clicks": "Klicks",
     "seconds": "Sekunden",
-    "punishPoints": "Strafpunkte"
+    "punishPoints": "Strafpunkte",
+    "recipeAfterClickOnClose": "Rezept nach Klick auf \"schließen\" ausführen"
 }
