add fullscreen button

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -191,5 +191,7 @@
     "modified": "Bearbeitet",
     "neededInput": "Benötigte Eingabe",
     "quantity": "Menge",
-    "output": "Ausgabe"
+    "output": "Ausgabe",
+    "fullscreen": "Vollbild",
+    "fullscreenExit": "Vollbild verlassen"
 }
