place speech bubbles in center when no actionObject is found and make them more robust against errors

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -193,5 +193,6 @@
     "quantity": "Menge",
     "output": "Ausgabe",
     "fullscreen": "Vollbild",
-    "fullscreenExit": "Vollbild verlassen"
+    "fullscreenExit": "Vollbild verlassen",
+    "invalidRecipe": "Ungültiges Rezept"
 }
