make overwrite subobjects collabsable

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -194,5 +194,6 @@
     "output": "Ausgabe",
     "fullscreen": "Vollbild",
     "fullscreenExit": "Vollbild verlassen",
-    "invalidRecipe": "Ungültiges Rezept"
+    "invalidRecipe": "Ungültiges Rezept",
+    "showMoreObjects": "Mehr Objekte anzeigen"
 }
