add more feedback if model is incomplete or invalid

--- a/src/client/locales/de-de/dict.json
+++ b/src/client/locales/de-de/dict.json
@@ -129,7 +129,7 @@
     "hand": "Hand",
     "reCalculate": "Erneut berechnen",
     "missingRequirementsTitle": "Fehlende Bedingungen",
-    "missingRequirementsText": "\"{name}\" kann nicht gespeichert werden, da es nicht vollständig ist.",
+    "missingRequirementsText": "\"{name}\" kann nicht gespeichert werden, da es nicht vollständig oder ungültig ist.",
     "ok": "OK",
     "amount": "Anzahl",
     "object": "Spezialisiertes Objekt",
@@ -142,10 +142,10 @@
     "inventoryObjects": "Inventarobjekte",
     "abstract": "Zusammenfassung",
     "knowledge": "Wissen",
-    "descriptionDe": "Deutsche Beschreibung",
-    "descriptionEn": "Englische Beschreibung",
-    "goalDescriptionDe": "Deutsche Zielbeschreibung",
-    "goalDescriptionEn": "Englische Zielbeschreibung",
+    "description_de-de": "Deutsche Beschreibung",
+    "description_en-us": "Englische Beschreibung",
+    "goalsName_de-de": "Deutsche Zielbeschreibung",
+    "goalsName_en-us": "Englische Zielbeschreibung",
     "addKnowledge": "Wissen hinzufügen",
     "collapseAll": "Alles einklappen",
     "xElements": "{count} Elemente",
@@ -195,5 +195,10 @@
     "fullscreen": "Vollbild",
     "fullscreenExit": "Vollbild verlassen",
     "invalidRecipe": "Ungültiges Rezept",
-    "showMoreObjects": "Mehr Objekte anzeigen"
+    "showMoreObjects": "Mehr Objekte anzeigen",
+    "required": "Benötigt",
+    "invalid": "Ungültig",
+    "background": "Hintergrund",
+    "errorDescription_de-de": "Deutsche Fehlerbeschreibung",
+    "errorDescription_en-us": "Englische Fehlerbeschreibung"
 }
