--- a/src/client/locales/en-us/dict.json
+++ b/src/client/locales/en-us/dict.json
@@ -129,7 +129,7 @@
     "hand": "Hand",
     "reCalculate": "recalculate",
     "missingRequirementsTitle": "Missing requirements",
-    "missingRequirementsText": "\"{name}\" cannot be saved because it is incomplete.",
+    "missingRequirementsText": "\"{name}\" cannot be saved because it is incomplete or invalid.",
     "ok": "OK",
     "amount": "Amount",
     "object": "Specialized object",
@@ -142,10 +142,10 @@
     "inventoryObjects": "Inventory objects",
     "abstract": "Abstract",
     "knowledge": "Knowledge",
-    "descriptionDe": "German description",
-    "descriptionEn": "English description",
-    "goalDescriptionDe": "German goal description",
-    "goalDescriptionEn": "English goal description",
+    "description_de-de": "German description",
+    "description_en-us": "English description",
+    "goalsName_de-de": "German goal description",
+    "goalsName_en-us": "English goal description",
     "addKnowledge": "Add knowledge",
     "collapseAll": "Collapse all",
     "xElements": "{count} elements",
@@ -195,5 +195,10 @@
     "fullscreen": "Fullscreen",
     "fullscreenExit": "Exit fullscreen",
     "invalidRecipe": "Invalid recipe",
-    "showMoreObjects": "Show more objects"
+    "showMoreObjects": "Show more objects",
+    "required": "Required",
+    "invalid": "Invalid",
+    "background": "Background",
+    "errorDescription_de-de": "German error description",
+    "errorDescription_en-us": "English error description"
 }
